add mocking data

--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="home-wrap" *ngIf="user; else notLoggedIn">
+<!-- <div class="home-wrap" *ngIf="user; else notLoggedIn">
     <h1>Welcome, {{ user.name || 'User' }}!</h1>
   
     <div class="profile">
@@ -12,7 +12,9 @@
   <ng-template #notLoggedIn>
     <div class="home-wrap">
       <h2>You are not logged in.</h2>
-      <a routerLink="/">Go back to login</a>
+      <a routerLink="/login">Go back to login</a>
     </div>
-  </ng-template>
+  </ng-template> -->
+
+  <p>Hello</p>
   
