--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -5,7 +5,21 @@
       <p class="subtitle">Sign in to continue</p>
     </header>
   
+
     <section class="actions" aria-live="polite">
+      <form (ngSubmit)="login()" autocomplete="off" *ngIf="!isRedirecting">
+        <div class="form-group">
+          <input type="text" [(ngModel)]="username" name="username" placeholder="Username" required autofocus class="form-control" />
+        </div>
+        <div class="form-group">
+          <input type="password" [(ngModel)]="password" name="password" placeholder="Password" required class="form-control" />
+        </div>
+        <button type="submit" class="btn btn-primary" [disabled]="isRedirecting">
+          Login
+        </button>
+      </form>
+      <div *ngIf="errorMsg" class="error-msg">{{ errorMsg }}</div>
+      <div class="divider">or</div>
       <button
         type="button"
         class="btn btn-google"
@@ -18,8 +32,9 @@
           {{ isRedirecting ? 'Redirecting…' : 'Continue with Google' }}
         </span>
       </button>
-  
       <p class="help">
+        Test account: <b>test / test123</b>
+        <br />
         Having trouble?
         <a routerLink="/home">Try Home</a>
         (for dev/testing)
