--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,20 +1,18 @@
-<!-- <div class="home-wrap" *ngIf="user; else notLoggedIn">
+<div class="home-wrap">
+  @if (user) {
     <h1>Welcome, {{ user.name || 'User' }}!</h1>
-  
+
     <div class="profile">
-      <img *ngIf="user.picture" [src]="user.picture" alt="Profile picture">
+      @if (user.picture) {
+        <img [src]="user.picture" alt="Profile picture">
+      }
       <p><strong>Email:</strong> {{ user.email }}</p>
     </div>
-  
-    <button class="btn logout" (click)="logout()">Logout</button>
-  </div>
-  
-  <ng-template #notLoggedIn>
-    <div class="home-wrap">
-      <h2>You are not logged in.</h2>
-      <a routerLink="/login">Go back to login</a>
-    </div>
-  </ng-template> -->
 
-  <p>Hello</p>
+    <button class="btn logout" (click)="logout()">Logout</button>
+  } @else {
+    <h2>You are not logged in.</h2>
+    <a routerLink="/login">Go back to login</a>
+  }
+</div>
   
